--- a/EBK/style.css
+++ b/EBK/style.css
@@ -11,8 +11,8 @@ body{
     color: #555;
 
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    
 }
+
 .logo-img{
     float : left;
     height: 60px;
@@ -35,7 +35,7 @@ header{
     background-image: linear-gradient(rgba(0,0,00.7), rgba(0,0,0,0.7)), url(images/Book.jpg);
     background-size: cover; 
     background-position: top;
-    height: 100vh;
+    height: 122vh;
     background-attachment: fixed;
 }
 .main-nav{
@@ -54,7 +54,7 @@ header{
 .main-nav li a:link,
 .main-nav li a:visited{
     padding: 10px 0;
-    color: #fff;
+    color: #eee;
     text-decoration:none;
     font-size: 90%;
     border-bottom: 2px solid transparent;
@@ -73,28 +73,29 @@ header{
     display : flex;
     height: 200px;
     width: 300px;
-    color: #aae;
+    color:  #e67e22;
 }
 
 .education-bank p{
     position: absolute;
     width : auto;
     top: 85%;
-    left: 25vw;
+    left: 27vw;
     display : flex;
     height: 200px;
-    width: 300px;
-    color: #aae;
+    width: 200px;
+    color: #e67e22;
 }
 .quotes p{
     position: absolute;
     width : auto;
     top: 85%;
-    left: 52vw;
+    left: 53vw;
     display : flex;
+    
     height: 200px;
-    width: 300px;
-    color: #aae;
+    width: 250px;
+    color:#e67e22;
 
 }
 .news-galary{
@@ -114,17 +115,14 @@ header{
     list-style: none;
 }
 .news{
-
     width: 100%;
     margin: 0px;
     margin-left: 10px;
     overflow: hidden;
-    
-    
 }
 .news img{
     opacity: 0.7;
-    width: 100%;
+    width: 80%;
     margin-left: 10px;
     overflow: hidden;
     min-height: 380px;
@@ -132,18 +130,28 @@ header{
     object-fit: contain;
     transform: scale(1.15);
     transition:  transform 0.5s, opacity 0.5s;
-    
 }
+.section-news h2{
+    color: whitesmoke;
+}
+.box-box14 img {
+
+    height: 300px;
+  }
 .news img:hover {
     transform: scale(1.10);
     opacity: 1;
 }
 .grid {
     display: grid;
+    margin: 0px 50px 10px 0px;
+    
     grid-template-columns: auto repeat(4, minmax(auto, 140px)) auto;
     grid-auto-rows: minmax(100px, 170px);
-    grid-gap: 0.5vw;
-    
+    grid-gap: 0.15vw;
+   padding-left:60px;
+   padding-top: 13px;
+    border: 2px solid white;
 }
 p{
     color: yellowgreen;
@@ -153,22 +161,22 @@ p{
     position: relative;
 }
 
-.box09 {
+.box11 {
     grid-column: 1/ span 2;
-    grid-row :span 1;
+    grid-row :span 2;
 }
 
-.box10 {
-    grid-column: span 2;
+.box12 {
+    grid-column: span 1;
+    grid-row: span 3;
+}
+
+.box13 {
+    grid-column: 1 / span 2;
     grid-row: span 2;
 }
 
 .box16 {
-    grid-column: 2 / span 2;
-    grid-row: span 2;
-}
-
-.box14 {
     grid-column: span 5;
-    grid-row: span 4;
+    grid-row: span 1;
 }
