--- a/EBK/style.css
+++ b/EBK/style.css
@@ -17,39 +17,44 @@ body{
     float : left;
     height: 60px;
     width: auto;
-    margin-left: 20px;
-    margin-top: 10px;
+    margin-left: 10px;
+    margin-top: 0px;
     
 }
 .logo{
     height: 1oopx;
     width: auto;
     float: left;
-    margin-top: 10px;
+    margin-top: 15px;
     margin-left: 10px;
     font-size: 30px;
     color: #fff;
 }
 header{
     background-image: url(images/Book.jpg);
-    background-image: linear-gradient(rgba(0,0,00.7), rgba(0,0,0,0.7)), url(images/Book.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.411), rgba(0, 0, 0, 0.411)), url(images/Book.jpg);
     background-size: cover; 
     background-position: top;
-    height: 122vh;
+    height: 100vh;
     background-attachment: fixed;
 }
 .main-nav{
-    float: right;
-    margin-right: 30px;
+    width:100%;
+   
     list-style: none;
-    margin-top: 30px;
-    font-size: 20px;
+    font-size: 25px;
+    background-color: rgba(8, 68, 68, 0.247);
+}
+.menu{
+    float: right;
+    margin-top: 15px;
+    margin-right: 20px;
 
 }
 .main-nav li{
 
     display: inline-block;
-    margin-left: 50px;
+    margin-left: 70px;
 }
 .main-nav li a:link,
 .main-nav li a:visited{
@@ -71,9 +76,8 @@ header{
     top: 25%;
     left: 5vw;
     display : flex;
-    height: 200px;
     width: 300px;
-    color:  #e67e22;
+    color:  White;
 }
 
 .education-bank p{
@@ -82,9 +86,8 @@ header{
     top: 85%;
     left: 27vw;
     display : flex;
-    height: 200px;
     width: 200px;
-    color: #e67e22;
+    color: #ffffff;
 }
 .quotes p{
     position: absolute;
@@ -92,45 +95,12 @@ header{
     top: 85%;
     left: 53vw;
     display : flex;
-    
-    height: 200px;
     width: 250px;
-    color:#e67e22;
+    color:#ffffff;
 
 }
-.news-galary{
-    margin-top: 5px;
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    width:100%;
-    justify-content: center;
 
-}
-.news-galary li{
-   display: block;
-   flex-wrap: wrap;
-    width: 40%;
-    margin-left: 10px;
-    list-style: none;
-}
-.news{
-    width: 100%;
-    margin: 0px;
-    margin-left: 10px;
-    overflow: hidden;
-}
-.news img{
-    opacity: 0.7;
-    width: 80%;
-    margin-left: 10px;
-    overflow: hidden;
-    min-height: 380px;
-    max-height: 200px;
-    object-fit: contain;
-    transform: scale(1.15);
-    transition:  transform 0.5s, opacity 0.5s;
-}
+
 .section-news h2{
     color: whitesmoke;
 }
