--- a/EBK/style.css
+++ b/EBK/style.css
@@ -6,7 +6,7 @@
 html,
 body{
     background-color: #fff;
-    background-image: url('../Images/back.png');
+    background-image: url('./images/ricepaper_@2X.png');
     background-repeat: repeat;
     color: #555;
 
@@ -22,7 +22,7 @@ body{
     
 }
 .logo{
-    height: 1oopx;
+    height: 10px;
     width: auto;
     float: left;
     margin-top: 15px;
@@ -38,6 +38,13 @@ header{
     height: 100vh;
     background-attachment: fixed;
 }
+header.other {
+    background-image: none;
+    
+    height: auto;
+    background-color: rgba(24, 11, 11, 0.342);
+}
+
 .main-nav{
     width:100%;
    
@@ -59,7 +66,7 @@ header{
 .main-nav li a:link,
 .main-nav li a:visited{
     padding: 10px 0;
-    color: #eee;
+    color: #fff;
     text-decoration:none;
     font-size: 90%;
     border-bottom: 2px solid transparent;
@@ -79,7 +86,10 @@ header{
     width: 300px;
     color:  White;
 }
+h2{ color:  White;
+text-align: center;
 
+}
 .education-bank p{
     position: absolute;
     width : auto;
@@ -93,7 +103,7 @@ header{
     position: absolute;
     width : auto;
     top: 85%;
-    left: 53vw;
+    left: 55vw;
     display : flex;
     width: 250px;
     color:#ffffff;
@@ -106,47 +116,40 @@ header{
 }
 .box-box14 img {
 
-    height: 300px;
+    height: 200px;
   }
 .news img:hover {
     transform: scale(1.10);
     opacity: 1;
 }
-.grid {
-    display: grid;
-    margin: 0px 50px 10px 0px;
-    
-    grid-template-columns: auto repeat(4, minmax(auto, 140px)) auto;
-    grid-auto-rows: minmax(100px, 170px);
-    grid-gap: 0.15vw;
-   padding-left:60px;
-   padding-top: 13px;
-    border: 2px solid white;
-}
+
 p{
     color: yellowgreen;
 }
 
-.box {
-    position: relative;
-}
+.picbox {
 
-.box11 {
-    grid-column: 1/ span 2;
-    grid-row :span 2;
-}
+    margin-top: 5px;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    width:100%;
 
-.box12 {
-    grid-column: span 1;
-    grid-row: span 3;
-}
+   
 
-.box13 {
-    grid-column: 1 / span 2;
-    grid-row: span 2;
 }
+.picbox li{
+    
+display: inline;
 
-.box16 {
-    grid-column: span 5;
-    grid-row: span 1;
+}
+.Gallery{
+    height: 300px;
+    width: 550px;
+   border: 3px solid blue;
+   padding:10px;
+    margin-left: 30px;
+    border-radius: 20px;
+    margin-bottom: 30px;
+    
 }
