--- a/EBK/style.css
+++ b/EBK/style.css
@@ -73,18 +73,19 @@ header.other {
 .main-nav li a:active{
     border-bottom: 2px solid #e67e22;
 }
+
+h2{ color:  blue;
+    text-align: center;
+    margin-top: 10px;
+    }
 .education-bank h2{
     position: absolute;
-   
-    top: 25%;
+    top: 150px;
     margin-left: 500px;
     display : flex;
     width: 400px;
-   
     color: white;
-}
-h2{ color:  White;
-text-align: center;
+    font-size: 28px;
 }
 .education-bank p{
     position: absolute;
@@ -92,22 +93,19 @@ text-align: center;
     left: 20px;
     display : flex;
     width: 250px;
-    height: 300px;
-    color: #ffffff;
-    font-size: 20px;
+    height: 100px;
+    color: snow;
+    font-size: 22px;
 }
 .quotes p{
     position: absolute;
     top: 50%;
    margin-left: 1250px;
+   font-size: 22px;
 }
 .section-news h2{
     color: whitesmoke;
 }
-.box-box14 img {
-
-    height: 200px;
-  }
 .news img:hover {
     transform: scale(1.10);
     opacity: 1;
@@ -118,7 +116,8 @@ p{
 }
 
 .picbox {
-    margin-top: 5px;
+    margin-top: 110px;
+    margin-left: 100px;
     list-style: none;
     display: flex;
     flex-wrap: wrap;
@@ -130,7 +129,7 @@ display: inline;
 }
 .Gallery{
     height: 300px;
-    width: 550px;
+    width: 400px;
     border: 3px solid blue;
     padding:10px;
     margin-left: 30px;
@@ -139,7 +138,10 @@ display: inline;
 }
 
 
-@media (max-width: 767px){
+
+
+
+@media (max-width: 900px){
     body{ font-size: 16px;}
     section { padding : 0 4%;}
  
@@ -174,9 +176,89 @@ display: inline;
 .education-bank h2{
     font-size: 18px;
     margin-top: 40px;
+    margin-left: 165px;
+    width: 300px;
+    color: white;
+    
+}
+
+.education-bank p{
+    margin-left: 75px;
+    font-size: 16px;
+    width: 120px;
+}
+.quotes p{
+    margin-left: 500px;
+    font-size: 16px;
+    width: 180px;
+
+}
+
+.picbox {
+    margin-top: 25px;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    width:50%;
+}
+
+.Gallery{
+    height: 300px;
+    width: 300px;
+    border: 3px solid blue;
+    padding:5px;
+    margin-left: 20px;
+    border-radius: 20px;
+    margin-bottom: 30px;
+    margin-top: 20px;
+}
+   
+   h2{
+        font-size: 100%;
+        margin-top:20px;
+        margin-left: 5px;
+        float: left;
+}}
+
+
+@media (max-width: 767px){
+    body{ font-size: 16px;}
+    section { padding : 0 4%;}
+ 
+.main-nav{
+    width:100%;
+    list-style: none;
+    font-size: 20px;
+    background-color: rgba(8, 68, 68, 0.247);
+}
+.menu{
+    float: right;
+    margin-top: 15px;
+    margin-right: 20px;
+}
+
+.logo{
+    height: 5px;
+    width: auto;
+    float: left;
+    margin-top: 15px;
+    margin-left: 10px;
+    font-size: 20px;
+    color: #fff;
+}
+
+.main-nav li{
+
+    display: inline-block;
+    margin-left: 150px;
+}
+  
+.education-bank h2{
+    font-size: 18px;
+    margin-top: 40px;
     margin-left: 65px;
     width: 400px;
-    color: black;
+    color: white;
     
 }
 
@@ -192,14 +274,28 @@ display: inline;
 
 }
 
+.Gallery{
+    height: 250px;
+    width: 250px;
+    border: 3px solid blue;
+    padding:5px;
+    margin-left: 20px;
+    border-radius: 20px;
+    margin-bottom: 30px;
+    margin-top: 25px;
+}
+
    
    h2{
         font-size: 100%;
-        margin-top: 40px;
+        margin-top: 25px;
         margin-left: 5px;
         float: left;
+       
 }}
   
+
+
 @media (max-width: 480px){
     body{ font-size: 12px;}
     section { padding : 0 4%;}
@@ -207,7 +303,7 @@ display: inline;
 .main-nav{
     width:100%;
     list-style: none;
-    font-size: 18px;
+    font-size: 16px;
     background-color: rgba(8, 68, 68, 0.247);
 }
 .menu{
@@ -228,27 +324,39 @@ display: inline;
     float: left;
     margin-top: 15px;
     margin-left: 10px;
-    font-size: 20px;
+    font-size: 16px;
     color: #fff;
 }
    
   .education-bank h2{
         font-size: 14px;
-        margin-top: 40px;
+        margin-top: 50px;
         margin-left: 25px;
         width: 300px;
         color:white;
         
 }
 .education-bank p{
-    margin-left: 10px;
+    margin-left: 100px;
     font-size: 14px;
-    width: 80px;
+    width: 120px;
 }
 .quotes p{
-    margin-left: 235px;
+    margin-left: 100x;
+    margin-top: 180px;
     font-size: 14px;
     width: 120px;
 
+}
+
+.Gallery{
+    height: 220px;
+    width: 220px;
+    border: 2px solid blue;
+    padding:5px;
+   
+    border-radius: 10px;
+    margin-bottom: 10px;
+    margin-top: 15px;
 }
 }
