--- a/EBK/style.css
+++ b/EBK/style.css
@@ -142,6 +142,39 @@ footer .row::before {
     display: none;
 }
 
+table {
+    margin-top: 10px;
+    margin-left: 15%;
+    margin-right: 20%;
+    border:none;
+
+    border-collapse: collapse;
+    width: 65%;
+}
+
+th, td {
+    text-align: center;
+    padding: 20px;
+    
+    
+}
+
+tr:nth-child(even){background-color: #f2f2f2}
+
+tr:nth-child(odd){
+    background-color: #B6D6CC;
+}
+
+th {
+    background-color: #4CAF50;
+    color: white;
+}
+.contact h2{
+    padding :20px;
+    margin-bottom: 40px;
+    left: 30px;
+}
+
 footer .row {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -311,7 +344,7 @@ footer .row {
 
 @media (max-width: 480px){
     body{ font-size: 12px;}
-    section { padding : 0 4%;}
+    section { padding : 0 2%;}
  
 .main-nav{
     width:100%;
