--- a/EBK/style.css
+++ b/EBK/style.css
@@ -31,8 +31,8 @@ body{
     color: #fff;
 }
 header{
-    background-image: url(images/SCHOOL1.jpg);
-    background-image: linear-gradient(rgba(0, 0, 0, 0.411), rgba(0, 0, 0, 0.411)), url(images/SCHOOL1.jpg);
+    background-image: url(images/kid.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.411), rgba(0, 0, 0, 0.411)), url(images/kid.jpg);
     background-size:contain; 
     background-position: top;
     height: 100vh;
@@ -47,7 +47,7 @@ header.other {
     width:100%;
     list-style: none;
     font-size: 25px;
-    background-color: rgba(8, 68, 68, 0.247);
+    background-color: rgba(6, 58, 58, 0.247);
 }
 .menu{
     float: right;
@@ -71,20 +71,21 @@ header.other {
 }
 .main-nav li a:hover,
 .main-nav li a:active{
-    border-bottom: 2px solid #e67e22;
+    border-bottom: 3px solid #b9db22;
 }
 
-h2{ color: snow;
+h2{ color: rgb(255, 255, 255);
     text-align: center;
     margin-top: 20px;
+    transform: translate(-5%, -20%);
     }
 .education-bank h2{
     position: absolute;
     top: 150px;
     margin-left: 500px;
     display : flex;
-    width: 400px;
-    color: white;
+    width: 600px;
+    color: rgb(255, 255, 255);
     font-size: 28px;
 }
 .education-bank p{
@@ -94,7 +95,7 @@ h2{ color: snow;
     display : flex;
     width: 250px;
     height: 100px;
-    color: snow;
+    color: rgb(255, 255, 255);
     font-size: 22px;
 }
 .quotes p{
@@ -104,15 +105,11 @@ h2{ color: snow;
    font-size: 22px;
 }
 .section-news h2{
-    color: whitesmoke;
+    color: rgb(255, 255, 255);
 }
 .news img:hover {
     transform: scale(1.10);
     opacity: 1;
-}
-
-p{
-    color: yellowgreen;
 }
 
 .picbox {
@@ -130,7 +127,7 @@ display: inline;
 .Gallery{
     height: 300px;
     width: 400px;
-    border: 3px solid blue;
+    border: 3px solid  blue;
     padding:10px;
     margin-left: 30px;
     border-radius: 20px;
@@ -175,12 +172,13 @@ th {
     left: 30px;
 }
 
-footer .row {
+footer .column {
     padding-top: 10px;
     padding-bottom: 10px;
     font-size: 1.2rem;
     display: flex;
     justify-content: center;
+    color: blue;
 }
 
 
