--- a/EBK/style.css
+++ b/EBK/style.css
@@ -12,6 +12,10 @@ body{
 
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+img{
+max-width:100%;
+height:auto;
+}
 
 .logo-img{
     float : left;
@@ -32,16 +36,21 @@ body{
 }
 header{
     background-image: url(images/kid.jpg);
-    background-image: linear-gradient(rgba(0, 0, 0, 0.411), rgba(0, 0, 0, 0.311)), url(images/kid.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.411), rgba(0, 0, 0, 0.616)), url(images/kid.jpg);
     background-size:contain; 
     background-position: top;
+    background-attachment: fixed;
+    background-size: cover;
+    min-height: 100vh;
+    background-repeat: no-repeat;
     height: 100vh;
+    width: 100vw;
     
 }
 header.other {
     background-image: none;
     height: auto;
-    background-color: rgba(24, 11, 11, 0.342);
+    background-color: rgba(24, 11, 11, 0.425);
 }
 .main-nav{
     width:100%;
@@ -341,6 +350,7 @@ footer .column {
        
 }}
   
+
 
 
 @media (max-width: 480px){
